# TerraChat

./: README.md  main.py  prompts.py  pyproject.toml  rate_limiter.py  server.py  start_terrachat.sh  terrachat.py  tools.py
.github/: CODEOWNERS
embeddings/: mistral.py
frontend/: .eslintrc.json  README.md  index.html  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
frontend/images/: Send copy.tsx  Send.tsx  SendActive.tsx  TerraSvg.tsx
frontend/src/: App.tsx  env.d.ts  main.tsx  types.ts
frontend/src/components/: Chat.tsx  CustomToggle.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  Header.tsx  Layout.tsx  LoadingDots.tsx  MessageControls.tsx  MessageList.tsx  ModelAvatar.tsx  ModelStatusIcons.tsx  Sidebar.tsx  StatusBanner.tsx  ThemeToggle.tsx
frontend/src/contexts/: LLMValidationContext.tsx  ModelAvatarContext.tsx  ThemeContext.tsx
frontend/src/pages/: Chat.tsx  Documentation.tsx  GettingStarted.tsx  NotFound.tsx
frontend/src/services/: api.ts
helpers/: json_helpers.py
llms/: base.py  cohere.py  google.py  mistral.py  openai.py  xai.py
utils/: helpers.py  logger.py
